Added notes to README, bumped version

--- a/README
+++ b/README
@@ -1,3 +1,12 @@
+= Sermo's fork of the thrift-0.5.0 gem
+
+We've made a few (Sermo-specific?) changes to thrift-0.5.0. These are:
+- Modified HttpTransport to send along some addtional HTTP headers
+- Added HttpCurlTransport, a transport based on patron/curl, which sends the same additional headers that HttpCurlTransport sends.
+- Added benchmarking and logging to Thrift::Processor.process
+- Modified BinaryProtocol to support Ruby 1.9 UTF-8 string encoding
+- Bumped version to 0.5.0.sermo
+
 Thrift Ruby Software Library
     http://incubator.apache.org/thrift/
 
